fix: make database state loading compatible with Java 8